<package>
  <name>slam_gmapping</name>
  <version>2.0.0</version>
  <description>slam_gmapping contains a wrapper around gmapping which provides SLAM capabilities.</description>
  <author>Brian Gerkey</author>
  <maintainer email="liyx@keenonrobot.com">Li Yinxuan</maintainer>
  <license>CreativeCommons-by-nc-sa-2.0</license>

  <url>http://ros.org/wiki/slam_gmapping</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>openslam_gmapping</run_depend>
  <run_depend>gmapping</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
